# QuantResearch_Opcode

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  BACKEND_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_COMPLETE.md  DASHBOARD_README.md  DASHBOARD_WORKING.md  Dockerfile  Dockerfile.backend  FINAL_CODE_REFERENCE.md  FRONTEND_BACKEND_INTEGRATION.md  LICENSE  Makefile  PULL_REQUEST.md  PULL_REQUEST_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_COMPLETE.md  TECHNICAL_DOCS.md  alembic.ini  docker-compose.yml  futurenotes.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  start.ps1  test_cli.py  test_conn.py  tracked.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/Contributor_Guide/: Contributing.md  Project_Tour.md
.github/ISSUE_TEMPLATE/: feature_request.yaml  good-first-issue-1.md  (+2 more)
.husky/: commit-msg
data_sample/: sample_prices.csv
examples/: README.md  autotune_config.yaml  csv_validation_example.py
notebooks/: 01-getting-started.ipynb
output/: backtest_results.json  factors.csv
scripts/: create_tables.py  entrypoint.sh  run_migrations.py  seed_dashboard.py  setup_dashboard.py  test_dashboard.py  wait_for_services.py
src/quant_research_starter/frontend/cauweb/: .env.example  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
src/quant_research_starter/frontend/cauweb/public/: test-auth.html
src/quant_research_starter/frontend/cauweb/src/: App.css  App.js  App.tsx  AppNew.tsx  global.css  main.tsx
src/quant_research_starter/frontend/cauweb/src/components/: AuthFloatingButton.tsx  AuthForm.tsx  Header.js  Header.tsx  Navigation.js  Navigation.tsx  PerformanceChart.tsx  Sidebar.tsx  Toast.tsx
src/quant_research_starter/frontend/cauweb/src/context/: AuthContext.tsx
src/quant_research_starter/frontend/cauweb/src/hooks/: useQuantData.js  useQuantData.ts  useToast.ts
src/quant_research_starter/frontend/cauweb/src/pages/: Alerts.tsx  Auth.tsx  Backtest.tsx  BacktestStudio.js  BacktestStudio.jsx  BacktestStudio.tsx  Cash.tsx  Dashboard.js  Dashboard.jsx  Dashboard.tsx  Portfolio.tsx  PortfolioAnalytics.js  PortfolioAnalytics.jsx  PortfolioAnalytics.tsx  ResearchLab.js  ResearchLab.jsx  ResearchLab.tsx  Settings.js  Settings.jsx  Settings.tsx  SystemStatus.tsx  Trading.tsx  Watchlists.tsx
src/quant_research_starter/frontend/cauweb/src/styles/: Dashboard.module.css  globals.css
src/quant_research_starter/frontend/cauweb/src/types/: index.ts
src/quant_research_starter/frontend/cauweb/src/utils/: animations.ts  api.backup.ts  api.js  api.ts  supabaseClient.ts
tests/: test_auth_utils.py  test_backtest.py  test_data.py  test_factors.py  test_health.py  test_metrics.py  test_plotting.py  test_tasks_runbacktest.py  test_validator.py
(+82 files in other folders)
